Fix header style on mobile

--- a/developers/src/pages/app/style.scss
+++ b/developers/src/pages/app/style.scss
@@ -13,6 +13,13 @@ header {
 
 .app-header {
   display: none;
+
+  .header-title {
+    max-width: 50vw;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .header-list {
